fix: ensure topbar is above scrollbars

--- a/src/main/webapp/src/components/topbar/TopBar.module.css
+++ b/src/main/webapp/src/components/topbar/TopBar.module.css
@@ -5,7 +5,7 @@
   height: 2em;
   background-color: #444444;
   position: fixed;
-  z-index: 6;
+  z-index: 7;
   top: 0;
   left: 0;
   width: 100%;
